--- a/DSA Using Python.ipynb
+++ b/DSA Using Python.ipynb
@@ -465,12 +465,23 @@
         "    self.n = 0\n",
         "    self.size = 1\n",
         "\n",
+        "# find item from the list\n",
         "  def find(self,item):\n",
         "    for i in range(self.n):\n",
         "      if self.A[i] == item:\n",
         "        return i\n",
-        "      else:\n",
-        "        raise Error('item not found')\n",
+        "    raise Error('item not found')\n",
+        "\n",
+        "  # insert item in the list\n",
+        "  def insert(self,pos,item):\n",
+        "    if self.n == self.size:\n",
+        "      self.__resize(self.size*2)\n",
+        "\n",
+        "    for i in range(self,pos,-1):\n",
+        "      self.A[i] = self.A[i - 1]\n",
+        "\n",
+        "    self.A[pos] =item\n",
+        "    self.n = self.n + 1\n",
         "\n",
         "\n",
         "  def __resize(self,new_capacity):\n",
@@ -490,7 +501,7 @@
       "metadata": {
         "id": "A4-3eucU1IK7"
       },
-      "execution_count": 87,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -501,7 +512,7 @@
       "metadata": {
         "id": "9S_BWtl41IIV"
       },
-      "execution_count": 80,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -511,12 +522,12 @@
       ],
       "metadata": {
         "id": "P-0fdsil1IFj",
-        "outputId": "d9467205-cc68-47c1-cc92-a29b221ab471",
+        "outputId": "7a2bdc7f-5e62-4983-db6d-03bf6de4bb9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +550,7 @@
       "metadata": {
         "id": "UCxO4vNLI1R8"
       },
-      "execution_count": 82,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -549,22 +560,22 @@
       ],
       "metadata": {
         "id": "U1gTFJM5wahf",
-        "outputId": "e827f57e-7bfc-44b4-bc51-6585f0c66d2c",
+        "outputId": "1b28cbee-9b8c-4e68-d631-4cb23e6ddf95",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 83,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "5"
+              "10"
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 93
         }
       ]
     },
@@ -575,12 +586,12 @@
       ],
       "metadata": {
         "id": "5MAVHiFB2HI0",
-        "outputId": "a15c0e9c-cc3f-4034-c0c0-c560aa3efdde",
+        "outputId": "35bd2dc4-31ab-4748-a4a2-132fd0e00ea4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +614,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +641,7 @@
           "height": 273
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -653,18 +664,18 @@
       ],
       "metadata": {
         "id": "pt2sXpgI2HAx",
-        "outputId": "90661ae5-3494-4987-d08c-88c5af88bfb0",
+        "outputId": "89af925c-a085-46b6-e5bb-457c1ff71f3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "world\n"
+            "hello\n"
           ]
         }
       ]
@@ -676,18 +687,18 @@
       ],
       "metadata": {
         "id": "2ppvQdhJ2G-P",
-        "outputId": "2df27c2d-d7d0-4532-aab4-e6a8ebd71b0b",
+        "outputId": "3f10503d-de93-448c-bc3f-e7c6b4581e58",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 78,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[hello,8,90,kabira]\n"
+            "[hello,8,90,kabira,world]\n"
           ]
         }
       ]
@@ -700,7 +711,7 @@
       "metadata": {
         "id": "p5zG4WAm2G6N"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -715,7 +726,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,6 +736,86 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L.find('world')"
+      ],
+      "metadata": {
+        "id": "axAFeizKMW7C",
+        "outputId": "54c50074-edc6-46a2-b0cc-e03800e6523e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Irgcc5aSMW3t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HEWrtj7AMW1t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DeQ9X-QoMWz0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CFlZM2M1MWxY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vJ3yqXzNMWu8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TRKevdTxMWsZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
