--- a/DSA Using Python.ipynb
+++ b/DSA Using Python.ipynb
@@ -421,6 +421,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Dynamic Array\n",
         "import ctypes\n",
         "class mylist:\n",
         "  def __init__(self):\n",
@@ -473,15 +474,33 @@
         "    raise Error('item not found')\n",
         "\n",
         "  # insert item in the list\n",
-        "  def insert(self,pos,item):\n",
+        "  def insert( self, pos,item):\n",
         "    if self.n == self.size:\n",
         "      self.__resize(self.size*2)\n",
         "\n",
-        "    for i in range(self,pos,-1):\n",
+        "    for i in range(self.n,pos,-1):\n",
         "      self.A[i] = self.A[i - 1]\n",
         "\n",
         "    self.A[pos] =item\n",
         "    self.n = self.n + 1\n",
+        "# delete item from the lsit\n",
+        "  def __delitem__(self,pos):\n",
+        "    if pos >= 0 and pos < self.n:\n",
+        "      for i in range(pos, self.n - 1):\n",
+        "        self.A[i] = self.A[i + 1]\n",
+        "      self.n = self.n - 1\n",
+        "    else:\n",
+        "      raise Error('index is not found')\n",
+        "\n",
+        "  # remove item from the list\n",
+        "  def remove(self,item):\n",
+        "    pos = self.find(item)\n",
+        "    if type(pos) == int:\n",
+        "    #delete\n",
+        "     self.__delitem__(pos)\n",
+        "    else:\n",
+        "      return pos\n",
+        "\n",
         "\n",
         "\n",
         "  def __resize(self,new_capacity):\n",
@@ -501,7 +520,7 @@
       "metadata": {
         "id": "A4-3eucU1IK7"
       },
-      "execution_count": 105,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -512,7 +531,7 @@
       "metadata": {
         "id": "9S_BWtl41IIV"
       },
-      "execution_count": 106,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -527,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +569,7 @@
       "metadata": {
         "id": "UCxO4vNLI1R8"
       },
-      "execution_count": 108,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -560,22 +579,22 @@
       ],
       "metadata": {
         "id": "U1gTFJM5wahf",
-        "outputId": "1b28cbee-9b8c-4e68-d631-4cb23e6ddf95",
+        "outputId": "a0b707e4-d6b7-418d-9800-5a67c2f43df2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 93,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10"
+              "5"
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 23
         }
       ]
     },
@@ -586,12 +605,12 @@
       ],
       "metadata": {
         "id": "5MAVHiFB2HI0",
-        "outputId": "35bd2dc4-31ab-4748-a4a2-132fd0e00ea4",
+        "outputId": "7bc75257-c462-419d-95f2-5deb27d2f32a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 109,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,35 +650,6 @@
     {
       "cell_type": "code",
       "source": [
-        "L[9]"
-      ],
-      "metadata": {
-        "id": "mog8HWio2HC_",
-        "outputId": "ee90e754-aa7b-49bd-d8cf-de6bd359d74b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 273
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "not in range",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1741200573.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/tmp/ipython-input-1545721751.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     14\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'not in range'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: not in range"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "L.pop()"
       ],
       "metadata": {
@@ -669,7 +659,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +739,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,43 +755,83 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "L.insert(3,'hi')\n",
+        "L"
+      ],
       "metadata": {
-        "id": "Irgcc5aSMW3t"
+        "id": "Irgcc5aSMW3t",
+        "outputId": "fc2652f2-4d41-472a-a31a-4d147321a7ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.mylist at 0x7ad61a603610>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(L)"
+      ],
       "metadata": {
-        "id": "HEWrtj7AMW1t"
+        "id": "HEWrtj7AMW1t",
+        "outputId": "d7192074-0f9e-41b6-b76b-81dc4565432f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[hello,8,kabira]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "del L[3]"
+      ],
       "metadata": {
         "id": "DeQ9X-QoMWz0"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "L.remove('world')"
+      ],
       "metadata": {
         "id": "CFlZM2M1MWxY"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#sum/min/max/sort\n",
+        "#extend/negative indexing\n",
+        "#slicing / merge"
+      ],
       "metadata": {
         "id": "vJ3yqXzNMWu8"
       },
